(library
 (name hdr_histogram)
 (public_name hdr_histogram)
 (install_c_headers hdr_histogram)
 (foreign_archives hdr_histogram)
 ; ctypes backward compatibility shims warn sometimes; suppress them
 (flags
  (:standard -w -9-27))
 (libraries unix)
 (ctypes
  (external_library_name hdr_histogram)
  (deps hdr_histogram.h dllhdr_histogram.so libhdr_histogram.a)
  (build_flags_resolver
   (vendored
    (c_flags :standard "-I.")))
  (headers
   (preamble
    "#include <hdr_histogram.h>\n     #include <stdio.h>\n\n     static inline bool hdr_record_value_int(struct hdr_histogram* h, int value)\n     { return hdr_record_value(h, value); }\n    "))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Function_fast)
   (functor Function_description_fast))
  (function_description
   (concurrency unlocked)
   (errno_policy return_errno)
   (instance Stdio)
   (functor Stdio_description))
  (function_description
   (concurrency unlocked)
   (instance Function)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))

(data_only_dirs libhdr_histogram)

(rule
 (deps
  (source_tree libhdr_histogram))
 (targets dllhdr_histogram.so libhdr_histogram.a hdr_histogram.h)
 (action
  (no-infer
   (progn
    (chdir
     libhdr_histogram
     (progn
      (run mkdir -p _build)
      (chdir
       _build
       (progn
        (run cmake ..)
        (run make)))))
    (copy
     libhdr_histogram/_build/src/libhdr_histogram_static.a
     libhdr_histogram.a)
    (copy
     libhdr_histogram/_build/src/libhdr_histogram.so
     dllhdr_histogram.so)
    (copy libhdr_histogram/include/hdr/hdr_histogram.h hdr_histogram.h)))))
